--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,9 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#796AEE" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="/libs/FontAwesome/css/font-awesome.min.css">
-  <title>React App</title>
+  <title>RocketList</title>
 </head>
 
 <body>
